Fixed issue #143 (multiple links for talks). * Created a new database column talks.links to store all links. * Added javascript to handle multiple link fields. * Joining field values with a semicolon to store in DB. * Displaying links in the details page. * Slightly improved CSS on details page to make all the quicklinks more readable and preventing the description from wrapping around photo.

--- a/src/inc/css/site.css
+++ b/src/inc/css/site.css
@@ -540,6 +540,22 @@ a {
 	font-size: 12px;
 }
 
+#ctn .main .desc {
+	position: relative;
+}
+#ctn .main .desc img {
+	float: left;
+	margin-bottom: 10px;
+}
+#ctn .main .desc div.right {
+	position: relative;
+	padding-left: 60px;
+}
+
+#ctn .main .quicklink {
+	clear: both;
+}
+
 #ctn .main .row-talk-comment .desc {
 	*margin-bottom: 0;
 }
@@ -857,6 +873,10 @@ a {
 	text-align: right;
 	border: 0;
 	margin-bottom: 0;
+}
+
+#ctn .main form .button {
+  width: inherit;
 }
 
 /***/
